commititng the home page changes

--- a/home.html
+++ b/home.html
@@ -1,43 +1,86 @@
 <!Doctype html>
 <html>
+
 <head>
     <title>DiagnosticsLab</title>
-        <link rel="stylesheet" href="stylesheet.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="stylesheet.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body class="padding">
-<header>
-    <div class="logo">
-    <img class="img" src="img/Icon.jpg">
+     <header>
+        <div class="logo">
+            <img class="img" src="img/Icon.jpg">
+            <h1 class="header">Diagnostics Lab</h1>
+        </div>
+        <div class="buttons">
+            <a href="login.html">
+                <button class="button">Login</button>
+            </a>
+            <a href="signup.html">
+                <button class="button secondary">Sign Up</button>
+            </a>
+        </div>
+    </header>
+    <section>
+        <div class="runner">
+        </div>
+    </section>
+    <nav>
+    </nav>
+    <div id="lab-container">
+        <figure id="slidy">
+            <img src="img/1.png" alt="image 1">
+            <img src="img/3.jpg" alt="image 2">
+            <img src="img/7.jpg" alt="image 3">
+            <img src="img/10.jpg" alt="image 4">
+            <img src="img/11.png" alt="image 5">
+            <img src="img/14.jpg" alt="image 6">
+            <img src="img/16.jpg" alt="image 7">
+        </figure>
     </div>
-    <div >
-    <h1 class="header">Diagnostics Lab</h1>
-    <h2 class="header">Sub Header</h2>
+    <script src="js/home.js"></script>
+    <div>
+        <div class="tilesContantiner">
+            <div class="tiles">
+                <h2>Diagnostic Laboratory</h2>
+                <p>Innovative Diagnostic Laboratory is a fully certified, National level-accredited laboratory maintaining the highest quality, efficiency, and commitment to meet the customer's expectations
+                    <br/>
+                    <br/>
+                    <!-- <span><a href="about-us.html">read more...</a></span> -->
+                </p>
+            </div>
+            <div class="tiles">
+                <h2>Latest News</h2>
+                <p> Innovative lab's in 2015 conducted 10 camps successfully.
+                    <br/> There are upcoming camps
+                    <br/>
+                    <br/>
+                    <!-- <span><a href="http://www.chanrediagnostic.com/news.html">read more...</a></span> -->
+                </p>
+            </div>
+            <div class="tiles">
+                <h2>Health Package</h2>
+                <p>
+                    <!-- These are all pdf that will be added after it has been decided -->
+                    <a href="" style="color:rgb(0, 245, 255);;">Cardiac screening camp</a>
+                    <br/>
+                    <a href="" style="color:rgb(0, 245, 255);;">Diabetes Screening Camp</a>
+                    <br/>
+                    <a href="" style="color:rgb(0, 245, 255);;">ENT Camp Pamplet</a>
+                    <br/>
+                    <a href="" style="color:rgb(0, 245, 255);">Health Package Brochure</a>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <!-- <span><a href="health.html">read more...</a></span> -->
+                </p>
+            </div>
+        </div>
+        <footer>
+            <p> Diagnostics Lab</p>
+        </footer>
     </div>
-    <div class="buttons">
-    <button class="button">Login</button>
-    <a href="signup.html">
-    <button class="button">Sign Up</button></a>
-    </div>
-</header>
-<section>
-<div class="runner">
-</div>
-</section>
-<nav>
-</nav>
-<section class="">
-<nav class="imagenav">
-    <li><img src="img/pic1.jpg"></li>
-    <li><img src="img/pic2.jpg"></li>
-    <li><img src="img/pic3.jpg"></li>
-</nav>
-</section>
-<div>
-<footer>
-<p> Diagnostics Lab</p>
-</footer>
-</div>
 </body>
+
 </html>
