adding media query for the Techviewhome page and creating test view

--- a/enteringtestresult.html
+++ b/enteringtestresult.html
@@ -39,10 +39,14 @@
         </nav>
         <section class="techcontents">
             <form>
-                Patient ID:
-                <input type="text" name="PatientID"> Report ID:
-                <input type="text" name="ReportID">
-                <br>
+            <div class="divPadding">
+               <label> Patient ID:
+                <input type="text" name="PatientID"></label>
+                </div>
+                <div class="divPadding">
+                <label> Report ID:
+                <input type="text" name="ReportID"></label>
+                </div>
             </form>
             <div style="clear: both;"></div>
             <br>
