--- a/signup.html
+++ b/signup.html
@@ -88,12 +88,12 @@
 
     <script type="text/javascript" src="js/lib.js"></script>
     <script type="text/javascript">
-    function getchecked(){
-        if (document.getElementById('selection').checked) {
-var selection = document.getElementById('selection');
-alert(selection);
-    }
-};
+//     function getchecked(){
+//         if (document.getElementById('selection').checked) {
+// var selection = document.getElementById('selection');
+// alert(selection);
+//     }
+// };
     function comparePassword() {
         var primepassword, secondpassword;
         primepassword = document.getElementById("password");
