--- a/enteringtestresult.html
+++ b/enteringtestresult.html
@@ -50,10 +50,10 @@
             </form>
             <div style="clear: both;"></div>
             <br>
-            <div id="words">
+            <div id="words" class="words">
                 <h1>Test Report</h1>
             </div>
-            <div >
+            <div class="table" >
             <table style="width:80%">
                 <tr id="table1">
                     <th>Test Names</th>
