Min width fix for navigation

--- a/tech-viewhome.html
+++ b/tech-viewhome.html
@@ -1,13 +1,15 @@
 <!Doctype html>
 <html>
-<head>
-	<title>DiagnosticsLab</title>
-	    <link rel="stylesheet" href="stylesheet.css" />
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="js/util.js"></script>
 
+<head>
+    <title>DiagnosticsLab</title>
+    <link rel="stylesheet" href="stylesheet.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="js/util.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
+
 <body class="padding">
     <header>
         <div class="logo">
@@ -17,33 +19,38 @@
         <div class="buttons">
             <button class="button">Logout</button>
         </div>
+        <div class="addnav">
+            <i class="fa fa-bars">
+        </i>
+    </div>
     </header>
-<section>
-<div class="runner">
-</div>
-</section>
-<section class="contents">
-<nav class="navigation">
-<ul>
-<li><a href="tech-viewhome.html">Home</li>
-<li><a href="Registernewpatient.html">Register New Patient</a></li>
-<li><a href="viewTestResult.html">View Test Result</a></li>
-<li><a href="entertestresult.html">Enter Test Result</a></li>
-<li><a href="CreatingTestCase.html">Order New Test</a></li>
-</ul>
-</nav>
-<section class="techcontents">
-	<ul>
-<li><a href="Registernewpatient.html">Register New Patient</a></li>
-<li><a href="viewTestResult.html">View Test Result</a></li>
-<li><a href="entertestresult.html">Enter Test Result</a></li>
-<li><a href="CreatingTestCase.html">Order New Test</a></li>
-</ul>
-
-</section>
-</section>
-<footer>
-<p>	Diagnostics Lab</p>
-</footer>
+    <section>
+        <div class="runner">
+        </div>
+    </section>
+    <section class="contents">
+        <nav class="navigation">
+            <ul>
+                <li><a href="tech-viewhome.html">Home</li>
+                <li><a href="Registernewpatient.html">Register New Patient</a></li>
+                <li><a href="viewTestResult.html">View Test Result</a></li>
+                <li><a href="entertestresult.html">Enter Test Result</a></li>
+                <li><a href="CreatingTestCase.html">Order New Test</a></li>
+            </ul>
+        </nav>
+        </section>
+      <section class="techcontents">
+            <ul>
+                <li><a href="Registernewpatient.html">Register New Patient</a></li>
+                <li><a href="viewTestResult.html">View Test Result</a></li>
+                <li><a href="entertestresult.html">Enter Test Result</a></li>
+                <li><a href="CreatingTestCase.html">Order New Test</a></li>
+            </ul>
+        </section>
+    </section>
+    <footer>
+        <p> Diagnostics Lab</p>
+    </footer>
 </body>
+
 </html>
