--- a/signup.html
+++ b/signup.html
@@ -36,39 +36,41 @@
                     <div class="signlegend">
                         <div>
                             <div id="error" class="errortext"></div>
-                            <label>Id<sup>*</sup></label>
+                            <label>Id<sup>*</sup>
                             <br>
-                            <input type="text" name="id" id="id" placeholder="Enter Your Id " class="textbox" required />
+                            <input type="text" name="id" id="id" placeholder="Enter Your Id " class="textbox" required /></label>
                         </div>
                         <div>
-                            <label>Name<sup>*</sup></label>
+                            <label>Name<sup>*</sup>
                             <br>
-                            <input type="text" name="name" id="name" placeholder="John" class="textbox" required />
+                            <input type="text" name="name" id="name" placeholder="John" class="textbox" required /></label>
                         </div>
                         <div>
-                            <label>User Name<sup>*</sup></label>
+                            <label>User Name<sup>*</sup>
                             <br>
-                            <input type="text" name="username" id="username" placeholder="username" class="textbox" required/>
+                            <input type="text" name="username" id="username" placeholder="username" class="textbox" required/></label>
                         </div>
                         <div>
-                            <label>Password<sup>*</sup></label>
+                            <label>Password<sup>*</sup>
                             <br>
                             <input type="password" name="password" id="password" placeholder="Password" class="textbox" required/>
+                            </label>
                         </div>
                         <div>
-                            <label>Confirm Password<sup>*</sup></label>
+                            <label>Confirm Password<sup>*</sup>
                             <br>
                             <input type="password" name="confirmpassword" id="confirmpassword" placeholder="Confirmpassword" class="textbox" onblur="comparePassword()" required />
+                            </label>
                         </div>
                         <div>
-                            <label>Email ID<sup>*</sup></label>
+                            <label>Email ID<sup>*</sup>
                             <br>
-                            <input type="email" name="email" id="email" placeholder="example@domain.com" class="textbox" required/>
+                            <input type="email" name="email" id="email" placeholder="example@domain.com" class="textbox" required/></label>
                         </div>
                         <div>
-                            <label>Phone Number<sup>*</sup></label>
+                            <label>Phone Number<sup>*</sup>
                             <br>
-                            <input type="number" name="phonenumber" id="phonenumber" placeholder="xxx-xxx xxxx" class="textbox" required/>
+                            <input type="number" name="phonenumber" id="phonenumber" placeholder="xxx-xxx xxxx" class="textbox" required/></label>
                         </div>
                         <div>
                             <input type="radio" name="selection" id="techn">Tech</input>
